--- a/ESTILOS.CSS
+++ b/ESTILOS.CSS
@@ -1,230 +1,375 @@
-nav.navbar ul.nav li {
-    font-family: 'Antonio', sans-serif;
-}
-
-.item-img {
-    width: 100%;
-    display: block;
-}
-
-.contenedor {
-    position: relative;
-    margin-top: 40px;
-    margin-bottom: 40px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 1vw;
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.item-not {
-    opacity: 0.95;
-    padding: 1em;
-    background: #d7d1ff;
-    cursor: pointer;
-    box-shadow: 0 0 5px rgba(0, 0, 0, .95);
-    position: relative;
-}
-
-body {
-    display: block;
-    font-family: 'Antonio', sans-serif;
-    background-color: #ECEDE7;
-    width: 100%;
-    height: 100%;
-}
-
-div.conteiner-fluid {
-    width: 100%;
-    height: 100%;
-}
-
-.portada {
-    width: 100%;
-    background-color: #708090;
-    align-content: center;
-    display: flex;
-    text-transform: uppercase;
-    letter-spacing: 3px;
-}
-
-.header {
-    flex-direction: row;
-    font-family: "Mr Dafoe";
-    width: 100%;
-    align-items: left;
-    justify-content: left;
-}
-
-.logo {
-    align-items: left;
-    flex-direction: column;
-    justify-items: left;
-    float: left;
-    width: 150px;
-    height: 150px;
-}
-
-.text1 {
-    display: block;
-    text-transform: uppercase;
-    letter-spacing: 3px;
-}
-
-.titulo {
-    margin-top: 10px;
-    margin-bottom: 0px;
-    font-size: 10vh;
-}
-
-.mensaje {
-    font-size: 5vh;
-    margin-top: 0px;
-    text-align: left;
-    grid-row-start: y0;
-    grid-row-start: y0;
-}
-
-.p {
-    font-size: 10vw;
-}
-
-.des-noticias {
-    font-family: 'Antonio', sans-serif;
-    color: white;
-}
-
-figure {
-    margin-top: 1em;
-    margin-bottom: 1em;
-}
-
-.imagen-principal {
-    text-align: center;
-}
-
-.articulo {
-    display: grid;
-    grid-template-columns: 95%;
-}
-
-.titulo-noticia {
-    text-align: center;
-    color: #000000;
-    font-size: 5vw;
-}
-
-.noticia {
-    width: 100%;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-}
-
-.laterales {
-    background-color: #0b0c0d
-}
-
-.noticia-cont {
-    text-align: left;
-    color: black;
-    margin-top: 15px;
-    margin-bottom: 15px;
-}
-
-.parrafo {
-    font-size: 20px;
-    font-weight: 10px;
-    margin-left: 5%;
-    margin-right: 5%
-}
-
-.sub-t {
-    margin-top: 25px;
-    margin-left: 5%;
-    margin-right: 5%;
-    color: #000000;
-    font-size: 35px;
-    font-weight: 20px;
-    font-width: 20px;
-}
-
-.imgn {
-    width: 80%;
-    height: auto;
-    margin: 0%;
-    border-style: ridge;
-    border-width: 5px;
-    border-color: grey
-}
-
-.carousel {
-    flex-direction: column;
-    align-items: center;
-}
-
-.img-ruleta {
-    height: auto;
-    width: 70%;
-}
-
-.block1 {
-    height: fit-content;
-    width: fit-content;
-    margin-bottom: 1px;
-    grid-column-start: x0;
-}
-
-.carusel-line {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    align-content: center;
-}
-
-.contador {
-    float: right;
-    width: auto;
-    height: auto;
-}
-
-@media screen and (max-width: 700px) {
-    /* responsive */
-    .titulo-noticia {
+    nav.navbar ul.nav li {
+        font-family: 'Antonio', sans-serif;
+    }
+    
+    .item-img {
         width: 100%;
+        display: block;
+    }
+    
+    .contenedor {
+        position: relative;
+        margin-top: 40px;
+        margin-bottom: 40px;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 1vw;
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    .item-not {
+        opacity: 0.95;
+        padding: 1em;
+        background: #d7d1ff;
+        cursor: pointer;
+        box-shadow: 0 0 5px rgba(0, 0, 0, .95);
+        position: relative;
+    }
+    
+    body {
+        display: block;
+        font-family: 'Antonio', sans-serif;
+        background-color: #ECEDE7;
+        width: 100%;
+        height: 100%;
+    }
+    
+    div.conteiner-fluid {
+        width: 100%;
+        height: 100%;
+    }
+    
+    .portada {
+        width: 100%;
+        background-color: #708090;
+        align-content: center;
+        display: flex;
+        text-transform: uppercase;
+        letter-spacing: 3px;
+    }
+    
+    .header {
+        flex-direction: row;
+        font-family: "Mr Dafoe";
+        width: 100%;
+        align-items: left;
+        justify-content: left;
+    }
+    
+    .logo {
+        align-items: left;
+        flex-direction: column;
+        justify-items: left;
+        float: left;
+        width: 150px;
+        height: 150px;
+    }
+    
+    .text1 {
+        display: block;
+        text-transform: uppercase;
+        letter-spacing: 3px;
+    }
+    
+    .titulo {
+        margin-top: 10px;
+        margin-bottom: 0px;
+        font-size: 10vh;
+    }
+    
+    .mensaje {
+        font-size: 5vh;
+        margin-top: 0px;
+        text-align: left;
+        grid-row-start: y0;
+        grid-row-start: y0;
+    }
+    
+    .p {
         font-size: 10vw;
-        margin-left: 0%;
+    }
+    
+    .des-noticias {
+        font-family: 'Antonio', sans-serif;
+        color: white;
+    }
+    
+    figure {
+        margin-top: 1em;
+        margin-bottom: 1em;
+    }
+    
+    .imagen-principal {
         text-align: center;
     }
-    .noticia-cont {
-        width: 100%;
-        font-size: 8vw;
-        margin-left: 0%;
-        text-align: left;
+    
+    .articulo {
+        display: grid;
+        grid-template-columns: 95%;
     }
-    .logo {
-        width: 100px;
-        height: 100px;
-    }
-    .portada {
-        flex-direction: column;
-    }
-    .portada.header {
-        flex-direction: row;
-        width: 100%;
-    }
-    .carusel-line {
-        width: 100%;
-        height: 50vh;
-    }
-    .des-noticias {
+    
+    .titulo-noticia {
+        text-align: center;
+        color: #000000;
         font-size: 5vw;
     }
-    .parrafo {
-        margin-left: 2px;
-        margin-right: 2px;
+    
+    .noticia {
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
     }
-}
+    
+    .laterales {
+        background-color: #0b0c0d
+    }
+    
+    .noticia-cont {
+        text-align: left;
+        color: black;
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
+    
+    .parrafo {
+        font-size: 20px;
+        font-weight: 10px;
+        margin-left: 5%;
+        margin-right: 5%
+    }
+    
+    .sub-t {
+        margin-top: 25px;
+        margin-left: 5%;
+        margin-right: 5%;
+        color: #000000;
+        font-size: 35px;
+        font-weight: 20px;
+        font-width: 20px;
+    }
+    
+    .imgn {
+        width: 80%;
+        height: auto;
+        margin: 0%;
+        border-style: ridge;
+        border-width: 5px;
+        border-color: grey
+    }
+    
+    .carousel {
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .img-ruleta {
+        height: auto;
+        width: 70%;
+    }
+    
+    .block1 {
+        height: fit-content;
+        width: fit-content;
+        margin-bottom: 1px;
+        grid-column-start: x0;
+    }
+    
+    .carusel-line {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        align-content: center;
+    }
+    
+    .contador {
+        float: right;
+        width: auto;
+        height: auto;
+    }
+    
+    @media screen and (max-width: 700px) {
+        /* responsive */
+        .titulo-noticia {
+            width: 100%;
+            font-size: 10vw;
+            margin-left: 0%;
+            text-align: center;
+        }
+        .noticia-cont {
+            width: 100%;
+            font-size: 8vw;
+            margin-left: 0%;
+            text-align: left;
+        }
+        .logo {
+            width: 100px;
+            height: 100px;
+        }
+        .portada {
+            flex-direction: column;
+        }
+        .portada.header {
+            flex-direction: row;
+            width: 100%;
+        }
+        .carusel-line {
+            width: 100%;
+            height: 50vh;
+        }
+        .des-noticias {
+            font-size: 5vw;
+        }
+        .parrafo {
+            margin-left: 2px;
+            margin-right: 2px;
+        }
+    }
+    
+    *,
+    *:before,
+    *:after {
+        box-sizing: border-box;
+    }
+    
+    html {
+        font-size: 100%;
+    }
+    
+    body {
+        font-family: acumin-pro, system-ui, sans-serif;
+        margin: 0;
+        display: grid;
+        grid-template-rows: auto 1fr auto;
+        font-size: 14px;
+        background-color: #f4f4f4;
+        align-items: start;
+        min-height: 100vh;
+    }
+    
+    .footer {
+        display: flex;
+        flex-flow: row wrap;
+        padding: 30px 30px 20px 30px;
+        color: #2f2f2f;
+        background-color: #708090;
+        border-top: 1px solid #e5e5e5;
+    }
+    
+    .footer>* {
+        flex: 1 100%;
+    }
+    
+    .footer__addr {
+        margin-right: 1.25em;
+        margin-bottom: 2em;
+    }
+    
+    .footer__logo {
+        font-family: 'Antonio';
+        font-weight: 400;
+        text-transform: lowercase;
+        font-size: 1.5rem;
+    }
+    
+    .footer__addr h2 {
+        margin-top: 1.3em;
+        font-size: 15px;
+        font-weight: 400;
+    }
+    
+    .nav__title {
+        font-weight: 400;
+        font-size: 15px;
+    }
+    
+    .footer address {
+        font-style: normal;
+        color: rgb(26, 26, 26);
+    }
+    
+    .footer__btn {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 36px;
+        max-width: max-content;
+        background-color: rgb(33, 33, 33, 0.07);
+        border-radius: 100px;
+        color: #2f2f2f;
+        line-height: 0;
+        margin: 0.6em 0;
+        font-size: 1rem;
+        padding: 0 1.3em;
+    }
+    
+    .footer ul {
+        list-style: none;
+        padding-left: 0;
+    }
+    
+    .footer li {
+        line-height: 2em;
+    }
+    
+    .footer a {
+        text-decoration: none;
+    }
+    
+    .footer__nav {
+        display: flex;
+        flex-flow: row wrap;
+    }
+    
+    .footer__nav>* {
+        flex: 1 50%;
+        margin-right: 1.25em;
+    }
+    
+    .nav__ul a {
+        color: rgb(7, 7, 7);
+    }
+    
+    .nav__ul--extra {
+        column-count: 2;
+        column-gap: 1.25em;
+    }
+    
+    .legal {
+        display: flex;
+        flex-wrap: wrap;
+        color: rgb(7, 7, 7);
+    }
+    
+    .legal__links {
+        display: flex;
+        align-items: center;
+    }
+    
+    .heart {
+        color: #2f2f2f;
+    }
+    
+    @media screen and (min-width: 24.375em) {
+        .legal .legal__links {
+            margin-left: auto;
+        }
+    }
+    
+    @media screen and (min-width: 40.375em) {
+        .footer__nav>* {
+            flex: 1;
+        }
+        .nav__item--extra {
+            flex-grow: 2;
+        }
+        .footer__addr {
+            flex: 1 0px;
+        }
+        .footer__nav {
+            flex: 2 0px;
+        }
+    }
